--- a/lib/res/lang/enUS.json
+++ b/lib/res/lang/enUS.json
@@ -1,8 +1,27 @@
 {
-  "menu": "Menu",
-  "home": "Home",
-  "playlists": "Playlists",
-  "explore": "Explore",
-  "settings": "Settings",
-  "song-title": "Feel the music"
+    "menu": "Menu",
+    "home": "Home",
+    "playlists": "Playlists",
+    "explore": "Explore",
+    "settings": "Settings",
+    "song-title": "Feel the music",
+    "sort-by": "Sort By",
+    "song-info": "Song Information",
+    "lyrics": "Lyrics",
+    "shuffle": "Shuffle",
+    "repeat": "Repeat",
+    "repeat-one": "Repeat One",
+    "maximize": "Maximize",
+    "minimize": "Minimize",
+    "low-volume": "Low Volume",
+    "medium-volume": "Medium Volume",
+    "high-volume": "High Volume",
+    "mute": "Mute",
+    "open-files": "Open Files",
+    "previous": "Previous",
+    "play": "Play",
+    "pause": "Pause",
+    "next": "Next",
+    "stop": "Stop",
+    "playlist": "Playlist"
 }
